--- a/src/components/Home/Course/Course.css
+++ b/src/components/Home/Course/Course.css
@@ -13,3 +13,17 @@
 .course-info{
     text-align: center;
 }
+.add-btn{
+    padding: 10px 50px;
+   background-color: rgb(14, 206, 240);
+    border: none;
+    border-radius: 60px;
+    color: black;
+    font-weight: 700;
+    font-size: 16px;
+    
+}
+.add-btn:hover{
+    background-color: brown;
+  
+}
