--- a/src/components/Home/Courses/Courses.css
+++ b/src/components/Home/Courses/Courses.css
@@ -2,6 +2,13 @@
     display: grid;
     grid-template-columns: 9fr 3fr;
 }
+.course-title{
+    margin: 30px 0;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    color: crimson;
+}
 .courses{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
