--- a/src/components/About/Sharing/Footer/Footer.css
+++ b/src/components/About/Sharing/Footer/Footer.css
@@ -1,6 +1,46 @@
 .footer{
     background-color: black;
     color: white;
+    margin-top: 50px;
+}
+
+.btn2{
+    height: 45px;
+    width: 100px;
+    background: white;
+    margin-left: -10px;
+    border: 2px solid white;
+    font-weight: 700;
+}
+.footer input{
+    height: 44px;
+    width: 55%;
+    border: 2px solid white;
+    background: black;
+    color: white;
+    outline: none;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.footer::placeholder{
+    color: white;
+}
+.footers p{
+    margin: 0;
+}
+/* .fa-brands {
+    font-size: 2.1rem;
+    cursor: pointer;
+    margin-right: 5px;
+   
+} */
+.social-icon i{
+    font-size: 30px;
+    margin-right: 20px;}
+
+/* .footer{
+    background-color: black;
+    color: white;
     margin-top: 30px;
 }
 .footer-input{
@@ -42,4 +82,4 @@
 .social-icon i{
    font-size: 30px;
    margin-right: 20px;
-}
+} */
