--- a/src/components/Home/Course/Course.css
+++ b/src/components/Home/Course/Course.css
@@ -15,16 +15,11 @@
 }
 .add-btn{
     padding: 10px 50px;
-    background-color: coral;
-   
+    background-color: rgba(237, 101, 144, 0.968);
     border: none;
     border-radius: 60px;
     color: black;
     font-weight: 700;
     font-size: 16px;
     
-}
-.add-btn:hover{
-    background-color: crimson;
-  
 }
