--- a/src/components/Home/Courses/Courses.css
+++ b/src/components/Home/Courses/Courses.css
@@ -16,7 +16,7 @@
    
     
 }
-.cart-btn{
+.review-btn{
     padding: 10px 50px;
     margin-top: 50px;
     border: none;
@@ -25,10 +25,9 @@
     font-weight: 700;
     font-size: 16px;
     background-color: brown;
+ 
 }
-.cart-btn:hover{
-   background-color: rgb(241, 76, 6);
-}
+
 @media  screen and (max-width: 600px) {
     .courses{
          display: grid;
